@@ -1,7 +1,6 @@
 package org.sonar.jvm.squad.wallboard.artifacts;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 import org.springframework.context.annotation.Lazy;
 import org.springframework.stereotype.Service;
@@ -10,6 +9,7 @@ import org.springframework.web.client.RestTemplate;
 @Service
 @Lazy
 public class ArtifactsService {
+  public static final String SONAR_JAVA = "sonar-java";
   RestTemplate restTemplate;
 
   ArtifactsService(RestTemplate restTemplate) {
@@ -19,23 +19,20 @@ public class ArtifactsService {
   public List<Artifact> all() {
     return List.of(
       new Artifact(
-        "sonar-java",
+        SONAR_JAVA,
         "7.24.0.32100",
         BuildType.RELEASE,
-        "https://repox.jfrog.io/artifactory/sonarsource/org/sonarsource/java/sonar-java-plugin/7.24.0.32100/sonar-java-plugin-7.24.0.32100.jar"
-      ),
+        "https://repox.jfrog.io/artifactory/sonarsource/org/sonarsource/java/sonar-java-plugin/7.24.0.32100/sonar-java-plugin-7.24.0.32100.jar"),
       new Artifact(
-        "sonar-java",
+        SONAR_JAVA,
         "7.25.0.32116",
         BuildType.MAIN,
-        "https://repox.jfrog.io/repox/sonarsource/org/sonarsource/java/sonar-java-plugin/7.25.0.32116/sonar-java-plugin-7.25.0.32116.jar"
-      ),
+        "https://repox.jfrog.io/repox/sonarsource/org/sonarsource/java/sonar-java-plugin/7.25.0.32116/sonar-java-plugin-7.25.0.32116.jar"),
       new Artifact(
-        "sonar-java",
+        SONAR_JAVA,
         "7.25.0.32117",
         BuildType.DOGFOOD,
-        "https://repox.jfrog.io/repox/sonarsource/org/sonarsource/java/sonar-java-plugin/7.25.0.32117/sonar-java-plugin-7.25.0.32117.jar"
-      )
+        "https://repox.jfrog.io/repox/sonarsource/org/sonarsource/java/sonar-java-plugin/7.25.0.32117/sonar-java-plugin-7.25.0.32117.jar")
 
     );
   }
@@ -43,6 +40,6 @@ public class ArtifactsService {
   public List<Artifact> findByName(String name) {
     return all().stream()
       .filter(artifact -> artifact.analyzer().equals(name))
-      .collect(Collectors.toList());
+      .toList();
   }
 }
